added delete row functinality

--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -49,6 +49,7 @@
                 <td><input type="number" class="loanEMI" required></td>
                 <td><input type="number" class="loanLength" required></td>
                 <td><input type="number" class="pendingLoan" required></td>
+                <td><span class="delete-btn" onclick="deleteRow(this)">&#10006;</span></td>
             </tr>
         </tbody>
     </table>
@@ -72,6 +73,8 @@
                 <td><input type="number" class="investmentEMI" required></td>
                 <td><input type="number" class="investmentPeriod" required></td>
                 <td><input type="number" class="initialAmount" required></td>
+                <td><span class="delete-btn" onclick="deleteRow(this)">&#10006;</span></td>
+
             </tr>
         </tbody>
     </table>
@@ -93,6 +96,7 @@
                 <td><input type="text" class="planName" required></td>
                 <td><input type="number" class="requiredAmount" required></td>
                 <td><input type="number" class="targetYear" required></td>
+                <td><span class="delete-btn" onclick="deleteRow(this)">&#10006;</span></td>
             </tr>
         </tbody>
     </table>
@@ -116,6 +120,7 @@
                 <td><input type="number" class="insuranceEMI" required></td>
                 <td><input type="number" class="beneficiaryAmount" required></td>
                 <td><input type="number" class="tillYear" required></td>
+                <td><span class="delete-btn" onclick="deleteRow(this)">&#10006;</span></td>
             </tr>
         </tbody>
     </table>
