--- a/Web/templates/styles.css
+++ b/Web/templates/styles.css
@@ -105,3 +105,16 @@
         margin-top: 20px;
         font-weight: bold;
     }
+.delete-btn {
+    color: red;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 4px 8px;
+    display: inline-block;
+}
+
+.delete-btn:hover {
+    background-color: #ffe5e5;
+    border-radius: 4px;
+}
