--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -37,10 +37,11 @@
     <table id="loanTable">
         <thead>
             <tr>
-                <th>Loan Type</th>
-                <th>Monthly EMI</th>
-                <th>Loan Length (in years)</th>
+                <th>Loan Name</th>
+                <th>Original Loan Amount</th>
                 <th>Pending Loan Amount</th>
+                <th>Monthly Pay</th>                
+                <th>Pending Length (months)</th>
             </tr>
         </thead>
         <tbody>
@@ -48,6 +49,7 @@
                 <td><input type="text" class="loanType" required></td>
                 <td><input type="number" class="loanEMI" required></td>
                 <td><input type="number" class="loanLength" required></td>
+                <td><input type="number" class="pendingLoan" required></td>
                 <td><input type="number" class="pendingLoan" required></td>
                 <td><span class="delete-btn" onclick="deleteRow(this)">&#10006;</span></td>
             </tr>
